--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -1,18 +1,18 @@
-<div flex layout="row" layout-align="center start" layout-wrap layout-padding layout-margin ng-attr-style="background-color: {{base_hue_lighter.value}};">
+<div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{primary_hue_normal.value}}; margin: 0; padding: 0;">
 	<div flex="100" style="text-align: center;">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
-	<div flex="100" layout-align="center start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row">
+	<div flex="100" layout-align="center center" layout-align-sm="space-around start" layout-align-gt-sm="space-around start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row">
 		<div ng-repeat="blog in bloglist | limitTo:7" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
 			<md-card class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative;">
 				<md-card-title>
 					<md-card-title-text>
 						<span class="md-headline">{{blog.data.title}}</span>
-						<span class="md-subhead">{{blog.data.subtitle}}</span>
+						<span class="md-subhead">By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm a"}}</span>
 					</md-card-title-text>
 				</md-card-title>
 				<md-card-content>
-					<p>By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm a"}}</p>
+					<p>{{blog.data.subtitle}}</p>
 				</md-card-content>
 			</md-card>
 		</div>
