--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -2,7 +2,7 @@
 	<div flex="100" style="text-align: center;">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
-	<div flex="100" layout-align="center center" layout-align-sm="space-around start" layout-align-gt-sm="space-around start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row">
+	<div flex="100" layout-align="center center" layout-align-sm="space-around start" layout-align-gt-sm="space-around start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
 		<div ng-repeat="blog in bloglist | limitTo:7" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
 			<md-card class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative;">
 				<md-card-title>
