--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -1,5 +1,5 @@
 <div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{primary_hue_normal.value}}; margin: 0; padding: 0;">
-	<div flex="100" style="text-align: center;">
+	<div flex="100" style="text-align: center; margin-top: 16px">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
 	<div flex="100" layout-align="center center" layout-align-sm="space-around start" layout-align-gt-sm="space-around start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
