--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -1,5 +1,5 @@
-<div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{primary_hue_normal.value}}; margin: 0; padding: 0;">
-	<div flex="100" style="text-align: center; margin-top: 16px">
+<div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{base_hue_lighter.value}}; margin: 0; padding: 0; padding-bottom: 32px;">
+	<div flex="100" style="text-align: center; margin-top: 32px">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
 	<div flex="100" layout-align="center center" layout-align-sm="start start" layout-align-gt-sm="start start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
@@ -8,12 +8,16 @@
 				<md-card-title>
 					<md-card-title-text>
 						<span class="md-headline">{{blog.data.title}}</span>
-						<span class="md-subhead">By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm a"}}</span>
 					</md-card-title-text>
 				</md-card-title>
 				<md-card-content>
 					<p>{{blog.data.subtitle}}</p>
 				</md-card-content>
+				<a ng-href="{{item.settings.url}}" style="position: absolute; bottom: 8px; right: 8px;">
+					<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Visit blog post" style="background-color: {{primary_hue_normal.value}};">
+	        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
+					</md-button>
+				</a>
 			</md-card>
 		</div>
 	</div>
