--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -7,7 +7,7 @@
 			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative;">
 				<md-card-title>
 					<md-card-title-text>
-						<span class="md-headline">{{blog.data.title}}</span>
+						<span class="md-headline" md-truncate>{{blog.data.title}}</span>
 					</md-card-title-text>
 				</md-card-title>
 				<md-card-content>
