--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -28,7 +28,7 @@
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
 							</div>
 							<a ng-href="{{item.settings.url}}" style="position: absolute; bottom: 8px; right: 8px;">
-							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
+							<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; z-index: 1">
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
 							</a>
