--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -4,10 +4,10 @@
 	</div>
 	<div flex="100" layout-align="center center" layout-align-sm="start start" layout-align-gt-sm="start start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
 		<div ng-repeat="blog in bloglist | limitTo:7" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
-			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative;">
-				<md-card-title>
+			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative; width: 100%;">
+				<md-card-title md-truncate>
 					<md-card-title-text>
-						<span class="md-headline" md-truncate>{{blog.data.title}}</span>
+						<span class="md-headline">{{blog.data.title}}</span>
 					</md-card-title-text>
 				</md-card-title>
 				<md-card-content>
