--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -3,7 +3,7 @@
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
 	<div flex="100" layout-align="center center" layout-align-sm="start start" layout-align-gt-sm="start start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
-		<div ng-repeat="blog in bloglist | limitTo:7" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
+		<div ng-repeat="blog in bloglist | limitTo:6" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
 			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative; width: 100%;">
 				<md-card-title md-truncate>
 					<md-card-title-text>
@@ -13,7 +13,7 @@
 				<md-card-content>
 					<p>{{blog.data.subtitle}}</p>
 				</md-card-content>
-				<a ng-href="{{item.settings.url}}" style="position: absolute; bottom: -32px; right: 8px;">
+				<a ng-href="{{blog.settings.url}}" style="position: absolute; bottom: -32px; right: 8px;">
 					<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Visit blog post" style="background-color: {{primary_hue_normal.value}}; z-index: 1;">
 	        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 					</md-button>
