--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -2,9 +2,9 @@
 	<div flex="100" style="text-align: center; margin-top: 48px">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
-	<div flex="100" layout-align="center center" layout-align-sm="start start" layout-align-gt-sm="start start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
+	<div flex="100" layout-align="center center" layout-align-sm="start start" layout-align-gt-sm="start start" layout="row" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
 		<div ng-repeat="blog in bloglist | limitTo:6" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
-			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative; width: 100%;">
+			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative;">
 				<md-card-title md-truncate>
 					<md-card-title-text>
 						<span class="md-headline">{{blog.data.title}}</span>
