--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -1,12 +1,12 @@
-<div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{base_hue_lighter.value}}; margin: 0; padding: 0; padding-bottom: 48px;">
-	<div flex="100" style="text-align: center; margin-top: 48px">
+<div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{primary_hue_normal.value}}; margin: 0; padding: 0; padding-bottom: 64px;">
+	<div flex="100" style="text-align: center; margin-top: 64px">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
 	<div flex="100" layout-align="center center" layout-align-sm="start start" layout-align-gt-sm="start start" layout="row" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
 		<div ng-repeat="blog in bloglist | limitTo:6" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
 			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative;">
-				<md-card-title md-truncate>
-					<md-card-title-text>
+				<md-card-title>
+					<md-card-title-text md-truncate>
 						<span class="md-headline">{{blog.data.title}}</span>
 					</md-card-title-text>
 				</md-card-title>
@@ -14,8 +14,8 @@
 					<p>{{blog.data.subtitle}}</p>
 				</md-card-content>
 				<a ng-href="{{blog.settings.url}}" style="position: absolute; bottom: -32px; right: 8px;">
-					<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Visit blog post" style="background-color: {{primary_hue_normal.value}}; z-index: 1;">
-	        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
+					<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Visit blog post" style="background-color: {{base_hue_lightest.value}}; z-index: 1;">
+	        			<md-icon style="color: {{primary_hue_normal.value}};">subdirectory_arrow_right</md-icon>
 					</md-button>
 				</a>
 			</md-card>
