--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -14,7 +14,7 @@
 					<p>{{blog.data.subtitle}}</p>
 				</md-card-content>
 				<a ng-href="{{blog.settings.url}}" style="position: absolute; bottom: -32px; right: 8px;">
-					<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Visit blog post" style="background-color: {{base_hue_lightest.value}}; z-index: 1;">
+					<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Visit blog post" style="background-color: {{base_hue_lightest.value}}!important; z-index: 1;">
 	        			<md-icon style="color: {{primary_hue_normal.value}};">subdirectory_arrow_right</md-icon>
 					</md-button>
 				</a>
