--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -6,8 +6,8 @@
 		<div ng-repeat="blog in bloglist | limitTo:6" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
 			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative;">
 				<md-card-title>
-					<md-card-title-text md-truncate>
-						<span class="md-headline">{{blog.data.title}}</span>
+					<md-card-title-text>
+						<md-truncate class="md-headline">{{blog.data.title}}</md-truncate>
 					</md-card-title-text>
 				</md-card-title>
 				<md-card-content>
