--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -1,4 +1,4 @@
-<div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{base_hue_darkest.value}}; margin: 0; padding: 0; padding-bottom: 64px;">
+<div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{base_hue_darker.value}}; margin: 0; padding: 0; padding-bottom: 64px;">
 	<div flex="100" style="text-align: center; margin-top: 64px">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
