--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -1,4 +1,4 @@
-<div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{primary_hue_normal.value}}; margin: 0; padding: 0; padding-bottom: 64px;">
+<!-- <div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{primary_hue_normal.value}}; margin: 0; padding: 0; padding-bottom: 64px;">
 	<div flex="100" style="text-align: center; margin-top: 64px">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
@@ -20,6 +20,40 @@
 					</md-button>
 				</a>
 			</md-card>
+		</div>
+	</div>
+</div> -->
+
+<div class="lw-auto-slider" style="position: relative;">
+	<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
+		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">MMA IN THE NEWS</h1>
+	</div>
+	<div class="lw-auto-slider-container">
+		<md-button class="md-whiteframe-4dp" ng-click="panel_swipe('right')" ng-disabled="news_post_swipe == false" ng-attr-style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
+			<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_left</md-icon>
+		</md-button>
+		<md-button class="md-whiteframe-4dp" ng-click="panel_swipe('left')" ng-disabled="news_post_swipe == false" ng-attr-style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; right: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
+			<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
+		</md-button>
+		<div class="news panel" ng-attr-style="left: 0; width: {{scroll_bar_aware_window_width * news_post_width}}px; transform:translate({{amount_to_slide}},0);" ng-swipe-left="panel_swipe('left')" ng-swipe-right="panel_swipe('right')">
+			<div layout-padding class="index-news-post" ng-repeat="blog in bloglist | limitTo:7" ng-class="{'one-third': window_width >= 960, 'one-half': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
+				<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative;">
+					<md-card-title style="padding-bottom: 0;">
+						<md-card-title-text style="width: 100%">
+							<md-truncate class="md-headline">{{blog.data.title}}</md-truncate>
+						</md-card-title-text>
+					</md-card-title>
+					<md-card-content style="max-height: 200px; padding-bottom: 36px;">
+						<p style="color: {{primary_hue_normal.value}};">{{blog.data.subtitle}}</p>
+						<p md-truncate>{{blog.data.page.contents[0].data}}</p>
+					</md-card-content>
+					<a ng-href="{{blog.settings.url}}" style="position: absolute; bottom: -32px; right: 8px;">
+						<md-button class="md-fab custom-deep-button md-whiteframe-6dp" aria-label="Visit blog post" style="background-color: {{primary_hue_normal.value}}!important; z-index: 1;">
+		        			<md-icon style="color: {{base_hue_lightest.value}};">subdirectory_arrow_right</md-icon>
+						</md-button>
+					</a>
+				</md-card>
+			</div>
 		</div>
 	</div>
 </div>
