--- a/lib/client/app/stylesheets/index.css
+++ b/lib/client/app/stylesheets/index.css
@@ -7,8 +7,8 @@
 .lw-auto-slider.projects {height: 100%;}
 .lw-auto-slider-container {position: relative; background-color: transparent; z-index: 2; padding-top: 0; padding-bottom: 0; height: 100%; width: 100%; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden;}
 .lw-auto-slider-container.projects {position: relative; background-color: transparent; z-index: 2; padding-top: 0; padding-bottom: 0; width: 100%; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden;}
-.index-news-post {width: 33%; overflow: hidden; float: left; box-sizing: border-box;}
-.index-news-post md-card {overflow: hidden;}
+.index-news-post {width: 33%; float: left; box-sizing: border-box;}
+.index-news-post md-card {}
 .index-news-post img {width: 100%!important; height: auto;}
 .index-news-post .post-image {max-height: 300px; overflow: hidden;}
 
