--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -9,9 +9,9 @@
 
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
-		<div layout="row" layout-wrap layout-align="start center" flex="100" ng-attr-style="background-color: {{primary_hue_normal.value}}; padding: 0; margin: 0;">
+		<div class="md-whiteframe-6dp projects-dropdown" layout="row" layout-wrap layout-align="start center" layout-padding flex="100" ng-attr-style="background-color: {{primary_hue_normal.value}}; padding: 0; margin: 0; width: 100%;">
 			<div flex="100" flex-sm="50" flex-gt-sm="50">
-				<h1>{{select_project_type}}</h1>
+				<h1 ng-attr-style="color: {{base_hue_lightest.value}};">{{select_project_type}}</h1>
 			</div>
 			<md-list-item flex="100" flex-sm="50" flex-gt-sm="50">
                 <md-input-container class="md-block lightweight-md-dropdown">
