--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -43,8 +43,11 @@
             </md-list-item>
 		</div>
 
+		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == null">
+		</div>
+
 		<!-- slider #1 -->
-		<div flex="100" layout="row" layout-align="space-around center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Civil Engineering'" ng-if="projects_civil_engineering.length">
+		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Civil Engineering'" ng-if="projects_civil_engineering.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Civil Engineering</h1>
 			</div>
@@ -76,7 +79,7 @@
 		<!-- slider #1 -->
 
 		<!-- slider #2 -->
-		<div flex="100" layout="row" layout-align="space-around center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Landscape Architecture'" ng-if="projects_landscape_architecture.length">
+		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Landscape Architecture'" ng-if="projects_landscape_architecture.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
 			</div>
@@ -108,7 +111,7 @@
 		<!-- slider #2 -->
 
 		<!-- slider #3 -->
-		<div flex="100" layout="row" layout-align="space-around center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Planning'" ng-if="projects_planning.length">
+		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Planning'" ng-if="projects_planning.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Planning</h1>
 			</div>
@@ -140,7 +143,7 @@
 		<!-- slider #3 -->
 
 		<!-- slider #4 -->
-		<div flex="100" layout="row" layout-align="space-around center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Surveying'" ng-if="projects_surveying.length">
+		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Surveying'" ng-if="projects_surveying.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Surveying</h1>
 			</div>
@@ -172,7 +175,7 @@
 		<!-- slider #4 -->
 
 		<!-- slider #5 -->
-		<div flex="100" layout="row" layout-align="space-around center" layout-wrap style="position: relative;" ng-show="select_project_type == 'GIS'" ng-if="projects_gis.length">
+		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'GIS'" ng-if="projects_gis.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">GIS</h1>
 			</div>
@@ -204,7 +207,7 @@
 		<!-- slider #5 -->
 
 		<!-- slider #6 -->
-		<div flex="100" layout="row" layout-align="space-around center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Aerial Mapping'" ng-if="projects_aerial_mapping.length">
+		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Aerial Mapping'" ng-if="projects_aerial_mapping.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
 			</div>
