--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -10,14 +10,14 @@
 		<div ng-include src="'application/partials/navigation-menu.html'"></div>
 
 		<div class="md-whiteframe-6dp projects-dropdown" layout="row" layout-wrap layout-align="start center" layout-padding flex="100" ng-attr-style="background-color: {{primary_hue_normal.value}}; padding: 0; margin: 0; width: 100%;">
-			<div layout-margin layout-padding flex>
+			<div layout-margin layout-padding flex="100" flex-sm="30" flex-gt-sm="50">
 				<h1 ng-attr-style="color: {{base_hue_lightest.value}};">{{select_project_type}}</h1>
 			</div>
-			<md-list-item layout-margin layout-padding flex>
+			<md-list-item layout-margin layout-padding flex="100" flex-sm="70" flex-gt-sm="50">
                 <md-input-container class="md-block lightweight-md-dropdown">
                     <label>Select a project category</label>
                     <md-select ng-model="select_project_type">
-                    	<md-option ng-if="projects_civil_engineering.length" value="null">
+                    	<md-option ng-selected="true" value="Select a project">
                             Select a project type
                         </md-option>
                         <md-option ng-if="projects_civil_engineering.length" value="Civil Engineering">
@@ -43,11 +43,11 @@
             </md-list-item>
 		</div>
 
-		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == null">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Select a project'">
 		</div>
 
 		<!-- slider #1 -->
-		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Civil Engineering'" ng-if="projects_civil_engineering.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Civil Engineering'" ng-if="projects_civil_engineering.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Civil Engineering</h1>
 			</div>
@@ -79,7 +79,7 @@
 		<!-- slider #1 -->
 
 		<!-- slider #2 -->
-		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Landscape Architecture'" ng-if="projects_landscape_architecture.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Landscape Architecture'" ng-if="projects_landscape_architecture.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
 			</div>
@@ -111,7 +111,7 @@
 		<!-- slider #2 -->
 
 		<!-- slider #3 -->
-		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Planning'" ng-if="projects_planning.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Planning'" ng-if="projects_planning.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Planning</h1>
 			</div>
@@ -143,7 +143,7 @@
 		<!-- slider #3 -->
 
 		<!-- slider #4 -->
-		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Surveying'" ng-if="projects_surveying.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Surveying'" ng-if="projects_surveying.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Surveying</h1>
 			</div>
@@ -175,7 +175,7 @@
 		<!-- slider #4 -->
 
 		<!-- slider #5 -->
-		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'GIS'" ng-if="projects_gis.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'GIS'" ng-if="projects_gis.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">GIS</h1>
 			</div>
@@ -207,7 +207,7 @@
 		<!-- slider #5 -->
 
 		<!-- slider #6 -->
-		<div class="listing" flex="100" layout="row" layout-align="start center" layout-wrap style="position: relative;" ng-show="select_project_type == 'Aerial Mapping'" ng-if="projects_aerial_mapping.length">
+		<div class="listing" flex="100" layout="row" layout-align="start start" layout-wrap style="position: relative;" ng-show="select_project_type == 'Aerial Mapping'" ng-if="projects_aerial_mapping.length">
 			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
 			</div>
