--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -13,6 +13,7 @@
 			<div layout-margin layout-padding flex="100" flex-sm="30" flex-gt-sm="30">
 				<h1 ng-attr-style="color: {{base_hue_lightest.value}};">{{select_project_type}}</h1>
 			</div>
+			<div flex></div>
 			<md-list-item layout-margin layout-padding flex="100" flex-sm="60" flex-gt-sm="50">
                 <md-input-container class="md-block lightweight-md-dropdown">
                     <label>Select a project category</label>
