--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -9,7 +9,7 @@
 			Your browser does not support the video tag.
 		</video>
         <div class="slideshow-content" style="z-index: 1;" flex>
-        	<div style="position: relative; max-width: 468px; height: 300px;" layout="row" layout-align="center center" flex>
+        	<div style="position: relative; max-width: 468px; height: 300px; background-color: rgba(0,0,0,.36);" layout="row" layout-align="center center" flex>
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
 	                    <h1 class="type simulated" ng-attr-style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; text-shadow: 1px 1.5px rgba(10,10,10,0.4)">We strive to <span ng-attr-style="color: {{primary_hue_normal.value}}" typewrite initial-delay="2000" blink-cursor="true" ng-attr-text="valueStatements"></span></h1>
