--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -1,4 +1,24 @@
-<div flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{base_hue_lighter.value}}; margin: 0; padding: 0; padding-bottom: 64px;">
+<style>
+	.giphy-background-index {
+		/*width: 200px;
+		height: 200px;
+		display: block;*/
+		position: relative;
+	}
+
+	.giphy-background-index::after {
+		content: "";
+		background: url('https://media.giphy.com/media/v2xIous7mnEYg/giphy.gif');
+		opacity: 0.5;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		position: absolute;
+		z-index: -1;   
+	}
+</style>
+<div class="giphy-background-index" flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{base_hue_lighter.value}}; margin: 0; padding: 0; padding-bottom: 64px;">
 	<div flex="100" style="text-align: center; margin-top: 64px">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
