--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -8,23 +8,23 @@
 
 	.giphy-background-index::after {
 		content: "";
-		background: url('https://media.giphy.com/media/v2xIous7mnEYg/giphy.gif');
-		opacity: 0.5;
+		background: url('https://media.giphy.com/media/v2xIous7mnEYg/giphy.gif') no-repeat;
+		background-size: cover;
+		opacity: 0.1;
 		top: 0;
 		left: 0;
 		bottom: 0;
 		right: 0;
-		position: absolute;
-		z-index: -1;   
+		position: absolute;  
 	}
 </style>
 <div class="giphy-background-index" flex layout="row" layout-align="center start" layout-wrap ng-attr-style="background-color: {{base_hue_lighter.value}}; margin: 0; padding: 0; padding-bottom: 64px;">
-	<div flex="100" style="text-align: center; margin-top: 64px">
+	<div flex="100" style="text-align: center; margin-top: 64px; z-index: 2">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
 	<div flex="100" layout-align="center center" layout-align-sm="start start" layout-align-gt-sm="start start" layout="row" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding>
 		<div ng-repeat="blog in bloglist | limitTo:6" flex="100" flex-sm="50" flex-gt-sm="33" layout-wrap>
-			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative;">
+			<md-card flex="100" class="md-whiteframe-6dp" style="background: {{base_hue_lightest.value}}; position: relative; z-index: 2">
 				<md-card-title style="padding-bottom: 0;">
 					<md-card-title-text style="width: 100%">
 						<md-truncate class="md-headline">{{blog.data.title}}</md-truncate>
