--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -8,7 +8,7 @@
 
 	.giphy-background-index::after {
 		content: "";
-		background: url('https://media.giphy.com/media/v2xIous7mnEYg/giphy.gif') no-repeat;
+		background: url('https://media.giphy.com/media/v2xIous7mnEYg/giphy.gif') no-repeat 50%;
 		background-size: cover;
 		opacity: 0.1;
 		top: 0;
