--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -28,10 +28,10 @@
 						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Careers</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">About Us</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Services</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Careers</p></a>
 					</md-list-item>
 					<md-list-item>
 						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Projects</p></a>
@@ -44,13 +44,13 @@
 						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Facebook</p></a>
+						<a style="cursor: pointer;" href="https://facebook.com/mmatexas"><p ng-attr-style="color: {{base_hue_lightest.value}};">Facebook</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Twitter</p></a>
+						<a style="cursor: pointer;" href="https://twitter.com/mma_texas"><p ng-attr-style="color: {{base_hue_lightest.value}};">Twitter</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Pinterest</p></a>
+						<a style="cursor: pointer;" href="https://linkedin.com/company/mmatexas"><p ng-attr-style="color: {{base_hue_lightest.value}};">LinkedIn</p></a>
 					</md-list-item>
 				</md-list>
 			</div>
