--- a/lib/client/app/application/partials/header.html
+++ b/lib/client/app/application/partials/header.html
@@ -2,7 +2,8 @@
 <div layout-align="center center" layout="row" layout flex>
 	<!-- Logo -->
 	<div flex="100" flex-gt-sm="25" layout-align="start center" layout-align-gt-sm="center center" layout="row">
-		<img src="media/logo.png" style="max-height: 64px;">
+		
+		<a href="/"><img src="media/logo.png" style="max-height: 64px;"></a>
 	</div>
 	<!-- Logo -->
 	<!-- Navigation Items -->
