--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -5,7 +5,7 @@
 	<div class="slide--display" slideshow-container>
 		<div class="video-overlay"></div>
 		<video class="slideshow_slide_image" style="display: block; margin: 0 auto; width: auto; height: auto; min-width: 100%; min-height: 100%;" autoplay loop>
-  			<source src="media/mma-hero-video.mp4" type="video/mp4">
+  			<source src="https://storage.googleapis.com/mma-texas.appspot.com/media/video/mma-hero.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
         <div class="slideshow-content" style="z-index: 1;" flex>
