--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -6,7 +6,7 @@
   			<source src="https://storage.googleapis.com/mma-texas.appspot.com/media/video/mma-hero.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
-        <div style="z-index: 1;" flex="90" layout="row">
+        <div style="z-index: 1; position: absolute;" flex="90" layout="row">
         	<div style="position: relative; max-width: 100%; height: 120px; background-color: rgba(0,0,0,.18); border-radius: 0 40px 0 40px;" layout="row" layout-align="center center" flex="100">
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
