--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -7,7 +7,7 @@
 			Your browser does not support the video tag.
 		</video>
         <div style="z-index: 1; position: absolute;" flex="90" layout="row">
-        	<div style="position: relative; max-width: 100%; height: 120px; background-color: rgba(0,0,0,.72); border-radius: 0 40px 0 40px;" layout="row" layout-align="center center" flex="100">
+        	<div style="position: relative; max-width: 100%; height: 120px; background-color: rgba(0,0,0,.72);" layout="row" layout-align="center center" flex="100">
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
 	                    <h1 class="type simulated" ng-attr-style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; text-shadow: 1px 1.5px rgba(10,10,10,0.4)">We strive to <span ng-attr-style="color: {{primary_hue_normal.value}}" typewrite initial-delay="2000" blink-cursor="true" ng-attr-text="valueStatements"></span></h1>
