--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -1,6 +1,31 @@
+<style>
+	.video-container {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		width: 100%;
+		height: 100%; 
+		overflow: hidden;
+	}
+	.video-container video {
+		/* Make video to at least 100% wide and tall */
+		min-width: 100%; 
+		min-height: 100%; 
+
+		/* Setting width & height to auto prevents the browser from stretching or squishing the video */
+		width: auto;
+		height: auto;
+
+		/* Center the video */
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%,-50%);
+	}
+</style>
 <!-- Hero Slideshow -->
 <div class="lightweight-hero--slideshow component slideshow" hero-element style="position: relative;" layout="row">
-	<div flex="100" layout="row" layout-align="center center" slideshow-container>
+	<div class="video-container" flex="100" layout="row" layout-align="center center" slideshow-container>
 		<div class="video-overlay"></div>
 		<video class="slideshow_slide_image" style="display: block; margin: 0 auto; width: auto; height: auto; min-width: 100%; min-height: 100%;" autoplay loop>
   			<source src="https://storage.googleapis.com/mma-texas.appspot.com/media/video/mma-hero.mp4" type="video/mp4">
