--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -4,6 +4,7 @@
 		height: 200px;
 		display: block;*/
 		position: relative;
+		border-bottom: 4px solid {{primary_hue_normal.value}};
 	}
 
 	.giphy-background-index::after {
