--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -1,5 +1,6 @@
 <style>
-	@media screen and (max-height: 600px) {.lightweight-hero--slideshow.component.slideshow {
+	@media screen and (max-width: 600px) {
+		.lightweight-hero--slideshow.component.slideshow {
 			max-height: 300px!important;
 		}
 	}
