--- a/lib/client/app/stylesheets/text.css
+++ b/lib/client/app/stylesheets/text.css
@@ -6,7 +6,7 @@ a, div, button{letter-spacing: 0em!important; font-family: 'Roboto', sans-serif;
 a {text-decoration: none;}
 
 p {font-size: 18px;}
-
+md-card-content .md-select-value>span:not(.md-select-icon) .md-text {color: rgba(0,0,0,0.87)!important;}
 .type.simulated {font-size: 64px;}
 .type.heading {font-size: 32px;}
 .type.heading-2 {font-size: 24px;}
