--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -67,7 +67,7 @@
 							</md-card-header-text>
 						</md-card-header>
 						<md-card-content>
-							<p style="color: {{base_hue_darker.value}};">{{item.data.description}}</p>
+							<p md-truncate style="color: {{base_hue_darker.value}};">{{item.data.description}}; max-height: 200px;</p>
 						</md-card-content>
 					</div>
 				</md-card>
@@ -96,7 +96,7 @@
 							</md-card-header-text>
 						</md-card-header>
 						<md-card-content>
-							<p style="color: {{base_hue_darker.value}};">{{item.data.description}}</p>
+							<p md-truncate style="color: {{base_hue_darker.value}};">{{item.data.description}}; max-height: 200px;</p>
 						</md-card-content>
 					</div>
 				</md-card>
@@ -125,7 +125,7 @@
 							</md-card-header-text>
 						</md-card-header>
 						<md-card-content>
-							<p style="color: {{base_hue_darker.value}};">{{item.data.description}}</p>
+							<p md-truncate style="color: {{base_hue_darker.value}};">{{item.data.description}}; max-height: 200px;</p>
 						</md-card-content>
 					</div>
 				</md-card>
@@ -154,7 +154,7 @@
 							</md-card-header-text>
 						</md-card-header>
 						<md-card-content>
-							<p style="color: {{base_hue_darker.value}};">{{item.data.description}}</p>
+							<p md-truncate style="color: {{base_hue_darker.value}};">{{item.data.description}}; max-height: 200px;</p>
 						</md-card-content>
 					</div>
 				</md-card>
@@ -183,7 +183,7 @@
 							</md-card-header-text>
 						</md-card-header>
 						<md-card-content>
-							<p style="color: {{base_hue_darker.value}};">{{item.data.description}}</p>
+							<p md-truncate style="color: {{base_hue_darker.value}};">{{item.data.description}}; max-height: 200px;</p>
 						</md-card-content>
 					</div>
 				</md-card>
@@ -212,7 +212,7 @@
 							</md-card-header-text>
 						</md-card-header>
 						<md-card-content>
-							<p style="color: {{base_hue_darker.value}};">{{item.data.description}}</p>
+							<p md-truncate style="color: {{base_hue_darker.value}};">{{item.data.description}}; max-height: 200px;</p>
 						</md-card-content>
 					</div>
 				</md-card>
