--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -67,7 +67,7 @@
 							</md-card-header-text>
 						</md-card-header>
 						<md-card-content>
-							<p md-truncate style="color: {{base_hue_darker.value}};">{{item.data.description}}; max-height: 200px;</p>
+							<p md-truncate style="color: {{base_hue_darker.value}}; max-height: 100px;">{{item.data.description}};</p>
 						</md-card-content>
 					</div>
 				</md-card>
