adding notifications to app

--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -2,7 +2,7 @@
 	<section style="background: {{base_hue_lighter.value}}">
 		
 		<!-- header -->
-		<md-subheader class="header" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
+		<md-subheader class="header md-whiteframe-6dp" layout-align="center center" layout="row" layout flex style="z-index: 5; border-bottom: 1px solid #e0e0e0">
 			<div ng-include src="'application/partials/header.html'"></div>
 		</md-subheader>
 		<!-- header -->
